--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,28 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  aws-cli: circleci/aws-cli@2.0.3
-# Orchestrate or schedule a set of jobs
-commands:
-  # Exercise: Reusable Job Code
-  print_pipeline_id:
-    parameters:
-      id: 
-        type: string
-    steps:
-      - run: echo << parameters.id >>
+
 jobs:
-  print_greetings:
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-          id: << pipeline.id >>
-      - run: echo HELLO
-      - run: echo WORLD
-      - run: echo $My_Name
+      - run: echo "hello world" > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
+
 workflows:
-  # Name the workflow "welcome"
   my_workflow:
-    # Run the welcome/run job in its own container
     jobs:
-      - print_greetings
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
