--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i inventory.txt main.yml
-
+            ansible-playbook main.yml -i inventory.txt --private-key cicd_keypair.pem
 workflows:
   # Name the workflow "welcome"
   my_workflow:
