--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["ea:fb:b7:a2:33:81:2b:f3:36:22:20:0f:3f:1f:68:fe"] # You can get this ID in the section where you registered the SSH Key
+          fingerprints: ["fc:3b:8b:83:b1:d2:02:30:e6:77:63:21:31:08:23:1b:49:f4:49:1e"] # You can get this ID in the section where you registered the SSH Key
       - run:
           name: Install dependencies
           command: |
